--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>代码展示</title><script defer="defer" src="/js/chunk-vendors.0326fc9a.js"></script><script defer="defer" src="/js/app.349683f8.js"></script><link href="/css/chunk-vendors.b4280ac8.css" rel="stylesheet"><link href="/css/app.9e43602f.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but code_display2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>代码展示</title><script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.min.js"></script><script defer="defer" src="/js/chunk-vendors.0326fc9a.js"></script><script defer="defer" src="/js/app.94c86784.js"></script><link href="/css/chunk-vendors.b4280ac8.css" rel="stylesheet"><link href="/css/app.1ff62088.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but code_display2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body><script>WIDGET = {
+  "CONFIG": {
+    "layout": "2",
+    "width": 230,
+    "height": 270,
+    "background": "1",
+    "dataColor": "FFFFFF",
+    "borderRadius": "5",
+    "key": "23f78513d30b4840b78c3ab6652e00d1"
+  }
+}</script><script src="https://widget.qweather.net/standard/static/js/he-standard-common.js?v=2.0"></script></html>
